# Indus

./: Dockerfile  Indus.code-workspace
.cursor/: ignore  instructions.md  rules
app/: main.py  worker.py
app/api/: deps.py
app/api/v1/endpoints/: auth.py  ingest.py
app/db/: session.py
app/models/: __init__.py  device.py  sensor.py
app/services/: auth.py
app/utils/: security.py
cloud/: docker-compose.yml  pyproject.toml
cloud/app/: main.py
cloud/app/api/v1/: __init__.py
cloud/app/api/v1/endpoints/: devices.py  ingest.py  users.py
cloud/app/core/: config.py
cloud/app/models/: user.py
cloud/tests/: test_health.py
contracts/: health.yml
contracts/openapi-generated/: README.md  build.gradle.kts
contracts/openapi-generated/.openapi-generator/: FILES
contracts/openapi-generated/docs/: DefaultApi.md  HealthRequest.md  HealthResponse.md
devops/compose/: docker-compose.yml
root-app/: CHANGELOG.md  build.gradle.kts  local.properties  package-lock.json  package.json  settings.gradle.kts
root-app/app/: build.gradle.kts
root-app/app/src/debug/: AndroidManifest.xml
root-app/app/src/debug/java/solutions/smartsecurity/root/ui/: DebugActivity.kt
root-app/app/src/main/: AndroidManifest.xml
root-app/app/src/main/java/solutions/smartsecurity/root/data/: HealthRepository.kt
root-app/app/src/main/java/solutions/smartsecurity/root/net/: ApiService.kt
root-app/app/src/main/java/solutions/smartsecurity/root/util/: PermissionHelper.kt
root-app/app/src/test/java/solutions/smartsecurity/root/: HealthIntegrationTest.kt
(+24 files in other folders)
