[tool.poetry]
name = "cloud"                  # 🔹 REQUIRED
version = "0.1.0"               # 🔹 REQUIRED
description = "SmartSecurity.Solutions cloud micro-service"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.30" }
sqlmodel = "^0.0.14"
asyncpg = "^0.29"
redis = "^5.0.4"
pydantic-settings = "^2.2"
python-dotenv = "^1.0"
argon2-cffi = "^23.1"
passlib = "^1.7"
PyJWT = "^2.8"
slowapi = "^0.1.9"
asyncio-mqtt = "^0.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27"
black = "^24.4"
ruff = "^0.4"
mypy = "^1.10"
bandit = "^1.7"
safety = "^3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
